changed app2.js name to app.js

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <p>--------------</p>
     <ul id="seatac">SEA-TAC AIRPORT</ul>
 
-    <script src="app2.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
