constructor, pike place instance added

--- a/index.html
+++ b/index.html
@@ -2,20 +2,19 @@
 <html>
 
   <head>
-    <title>Campfire Coffee, Monday version</title>
+    <title>Campfire Coffee, Tuesday version</title>
+    <!-- <link rel="stylesheet" type="text/css" href="style.css" /> -->
   </head>
 
   <body>
-    <ul id="pike">PIKE PLACE MARKET</ul>
-    <p>--------------</p>
-    <ul id="capitol">CAPITOL HILL</ul>
-    <p>--------------</p>
-    <ul id="spl">SEATTLE PUBLIC LIBRARY</ul>
-    <p>--------------</p>
-    <ul id="slu">SOUTH LAKE UNION</ul>
-    <p>--------------</p>
-    <ul id="seatac">SEA-TAC AIRPORT</ul>
+
+    <h1>Beans Needed By Location Each Day</h1>
+    <table id="beans-table"></table>
+
+    <h1>Barista Hours Needed By Location Each Day</h1>
+    <table id="baristas-table"></table>
 
     <script src="app.js"></script>
+
   </body>
 </html>
