have test js tablecode going

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
   <body>
 
+    <!-- start of my test table code -->
+    <table id="test-table"></table>
+    <!-- end of my test table code -->
+
     <h1>Beans Needed By Location Each Day</h1>
     <table id="beans-table"></table>
 
