--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
 
     <!-- start of my test table code -->
-    <table id="test-table"></table>
+    <table id="test-table" border=1></table>
     <!-- end of my test table code -->
 
     <h1>Beans Needed By Location Each Day</h1>
