employees table data working, no loops yet

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <table id="test-table" border=1></table>
     <!-- end of my test table code -->
 
+    <!-- start of my test table code -->
+    <table id="test-table-employees" border=1></table>
+    <!-- end of my test table code -->
+
     <h1>Beans Needed By Location Each Day</h1>
     <table id="beans-table"></table>
 
