table header row creation loop working

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 
     <!-- start of my test table code -->
     <table id="test-table" border=1></table>
-    <!-- end of my test table code -->
 
     <!-- start of my test table code -->
     <table id="test-table-employees" border=1></table>
-    <!-- end of my test table code -->
+
+    <!-- test area for table header -->
+    <table id="test-table-header" border=1></table>
 
     <h1>Beans Needed By Location Each Day</h1>
     <table id="beans-table"></table>
