--- a/data.html
+++ b/data.html
@@ -8,22 +8,20 @@
 
   <body>
 
-    <!-- REPLACE ME WITH THE OLD INDEX.HTML INFORMATION, THIS IS THE CODE FOR THE DATA.HTML PAGE -->
+    <!-- start of my test table code -->
+    <!-- <table id="test-table" border=1></table> -->
 
     <!-- start of my test table code -->
-    <table id="test-table" border=1></table>
-
-    <!-- start of my test table code -->
-    <table id="test-table-employees" border=1></table>
+    <!-- <table id="test-table-employees" border=1></table> -->
 
     <!-- test area for table header -->
-    <table id="test-table-header" border=1></table>
+    <!-- <table id="test-table-header" border=1></table> -->
 
     <h1>Beans Needed By Location Each Day</h1>
-    <table id="beans-table"></table>
+    <table border="1" id="beans-table"></table>
 
     <h1>Barista Hours Needed By Location Each Day</h1>
-    <table id="baristas-table"></table>
+    <table border="1" id="baristas-table"></table>
 
     <script src="app.js"></script>
 
