tables appearing correctly, loops not working

--- a/data.html
+++ b/data.html
@@ -8,20 +8,14 @@
 
   <body>
 
-    <!-- start of my test table code -->
-    <!-- <table id="test-table" border=1></table> -->
-
-    <!-- start of my test table code -->
-    <!-- <table id="test-table-employees" border=1></table> -->
-
-    <!-- test area for table header -->
-    <!-- <table id="test-table-header" border=1></table> -->
-
     <h1>Beans Needed By Location Each Day</h1>
     <table border="1" id="beans-table"></table>
 
     <h1>Barista Hours Needed By Location Each Day</h1>
     <table border="1" id="baristas-table"></table>
+
+    <h1>This Is A Test Table</h1>
+    <table border="1" id="test-table"></table>
 
     <script src="app.js"></script>
 
