cleaned up table creation loops

--- a/data.html
+++ b/data.html
@@ -3,19 +3,19 @@
 
   <head>
     <title>Campfire Coffee, Tuesday version</title>
-    <!-- <link rel="stylesheet" type="text/css" href="style.css" /> -->
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
 
   <body>
 
     <h1>Beans Needed By Location Each Day</h1>
-    <table border="1" id="beans-table"></table>
+    <table id="beans-table"></table>
 
     <h1>Barista Hours Needed By Location Each Day</h1>
-    <table border="1" id="baristas-table"></table>
+    <table id="baristas-table"></table>
 
-    <h1>This Is A Test Table</h1>
-    <table border="1" id="test-table"></table>
+    <!-- <h1>This Is A Test Table</h1>
+    <table border="1" id="test-table"></table> -->
 
     <script src="app.js"></script>
 
