data table cells functional, need to fill

--- a/data.html
+++ b/data.html
@@ -14,8 +14,8 @@
     <h1>Barista Hours Needed By Location Each Day</h1>
     <table id="baristas-table"></table>
 
-    <!-- <h1>This Is A Test Table</h1>
-    <table border="1" id="test-table"></table> -->
+    <h1>This Is A Test Table</h1>
+    <table id="test-table"></table>
 
     <script src="app.js"></script>
 
