basic form submit working

--- a/data.html
+++ b/data.html
@@ -8,13 +8,13 @@
 
   <body>
 
-    <form id="add-new-location">
-      Name of new location: <input id="new-location-name" type="text" name="" size="15" maxlength="30" /><br />
-      Minimum customers per hour: <input id="new-min-customers" type="text" name="" size="15" maxlength="30" /><br />
-      Maximum customers per hour: <input id="new-max-customers" type="text" name="" size="15" maxlength="30" /><br />
-      Average cups sold per customer: <input id="new-avg-cups" type="text" name="" size="15" maxlength="30" /><br />
-      Average pound bags sold per customer: <input id="new-avg-bags" type="text" name="" size="15" maxlength="30" /><br />
-      <input type='submit' name='submit-new-store' value='Add New Store' />
+    <form id="add-new-location-form">
+      Name of new location: <input name="newlocation" type="text" size="15" maxlength="30" /><br />
+      Minimum customers per hour: <input name="newmin" type="text" size="15" maxlength="30" /><br />
+      Maximum customers per hour: <input name="newmax" type="text" size="15" maxlength="30" /><br />
+      Average cups sold per customer: <input name="newcups" type="text" size="15" maxlength="30" /><br />
+      Average pound bags sold per customer: <input name="newpounds" type="text" size="15" maxlength="30" /><br />
+      <input type='submit' id='add-new-location-button' value='Add New Store' />
     </form>
 
     <h1>Beans Needed By Location Each Day</h1>
