--- a/data.html
+++ b/data.html
@@ -20,6 +20,9 @@
       </form>
     </div>
 
+    <h1>Test Table For Totals Footer</h1>
+    <table id="test-table"></table>
+
     <h1>Beans Needed By Location Each Day</h1>
     <table id="beans-table"></table>
 
