added images folder and four images

--- a/index.html
+++ b/index.html
@@ -1,31 +1,36 @@
+
 <!DOCTYPE html>
 <html>
 
   <head>
-    <title>Campfire Coffee, Tuesday version</title>
-    <!-- <link rel="stylesheet" type="text/css" href="style.css" /> -->
+    <title>About Me, Code Fellows 201 Class Project, Week 1</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
 
   <body>
 
-    <!-- REPLACE ME WITH THE OLD INDEX.HTML INFORMATION, THIS IS THE CODE FOR THE DATA.HTML PAGE -->
+    <main>
+      <div id="companyname"></div>
+      <div id="maininfo">
+        <div id="locationshours"></div>
+        <aside id="socialmedia"></div>
+      </div>
+      <div id="ourstory"><img src="" id="ourstoryimg" />
+        <div id="ourstorytext"></div>
+      </div>
+      <div id="aboutthecoffee">
+        <div id="aboutthecoffeetxt"></div>
+        <img src="" id="aboutthecoffeeimg" />
+      </div>
+      <div id="blog">
+      </div>
+    </main>
 
-    <!-- start of my test table code -->
-    <table id="test-table" border=1></table>
+    <footer>
+    </footer>
 
-    <!-- start of my test table code -->
-    <table id="test-table-employees" border=1></table>
-
-    <!-- test area for table header -->
-    <table id="test-table-header" border=1></table>
-
-    <h1>Beans Needed By Location Each Day</h1>
-    <table id="beans-table"></table>
-
-    <h1>Barista Hours Needed By Location Each Day</h1>
-    <table id="baristas-table"></table>
-
-    <script src="app.js"></script>
+    <script src="app.js" type="text/javascript"></script>
 
   </body>
+
 </html>
