basic flex layout

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
   <head>
-    <title>About Me, Code Fellows 201 Class Project, Week 1</title>
+    <title>Campfire Coffee - Seattle, WA</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
@@ -12,71 +12,64 @@
   <body>
 
     <main>
-      <div id="maininfo">
-        <div id="companyname"><h1>Campfire Coffee</h1></div>
-        <div id="maininfo">
-          <div id="locationshours">
-            <table id="locationshourstable">
-              <tr>
-                <td colspan="2">Our Locations</td>
-                <td>Hours</td>
-              <tr>
-                <td>Pike Place Market</td>
-                <td>Western &amp; Virginia</td>
-                <td>7am - 9pm</td>
-              </tr>
-              <tr>
-                <td>Capitol Hill</td>
-                <td>12th &amp; Pike</td>
-                <td>7am - 9pm</td>
-              </tr>
-              <tr>
-                <td>Seattle Public Library</td>
-                <td>5th &amp; Madison</td>
-                <td>7am - 9pm</td>
-              </tr>
-              <tr>
-                <td>South Lake Union</td>
-                <td>Republican &amp; Terry</td>
-                <td>7am - 9pm</td>
-              </tr>
-              <tr>
-                <td>Sea-Tac Airport</td>
-                <td>Concourse C</td>
-                <td>7am - 9pm</td>
-              </tr>
-            </table>
-          </div>
-          <aside id="socialmedia">
-            <img src="images/icon_twitter.png" />
-            <img src="images/icon_instagram.png" />
-            <img src="images/icon_facebook.png" />
-          </div>
-        </div>
-      </div>
-      <article id="ourstory"><img src="images/campfire-coffee.jpg" id="ourstoryimg" alt="Photograph of a kettle over a campfire." title="Photograph of a kettle over a campfire." />
-        <div id="ourstorytext">
-          <p>Instant carajillo qui aged trade extra seasonal Dark go extra variety grinder java espresso. Cup organic dripper extraction redeye rich medium medium go mountain trade seasonal coffee press. Irish pot white whipped cappuccino white plunger frappuccino percolator ut single Caffeine barista. Irish café skinny Variety so affogato cinnamon panna viennese single sit Variety cup rich. Cortado robust kopi-luwak café est milk cortado café organic aged to cultivar decaffeinated. Beans aromatic robust so flavour organic Coffee redeye Seasonal grinder extra milk.</p>
-        </div>
-      </article>
-      <article id="aboutthecoffee">
-        <div id="aboutthecoffeetxt">
-          <p>Cinnamon instant grinder that rich Affogato Instant half milk white aftertaste carajillo ristretto shop. Shop aromatic panna doppio dripper Coffee mountain body milk robust french brewed skinny. Brewed irish cappuccino mountain sugar arabica cortado skinny lait Instant aged french Frappuccino Coffee. Brewed Caffeine grounds Shop shot Dark panna foam Coffee lungo black affogato wings pot.</p>
-        </div>
-        <img src="images/campfire.jpg" id="aboutthecoffeeimg" alt="Photograph of a campfire on a beach in the PNW." title="Photograph of a campfire on a beach in the PNW." />
-      </article>
-      <h1>Our Blog</h1>
-      <article id="blog">
-        <img src="images/campfire-family.jpg" id="blogimage" alt="Photograph of my family roasting marshmallows over a campfire, I was 5 years old." title="Photograph of my family roasting marshmallows over a campfire, I was 5 years old." />
-        <p>Chicory carajillo cappuccino Affogato half frappuccino est irish origin grounds aged spice pumpkin extraction. Iced aromatic ristretto Shop mazagran est viennese Coffee doppio Seasonal white white. Percolator cultivar Caffeine coffee robust barista strong to to aromatic grounds spoon galão. Variety kopi-luwak extra cappuccino redeye go to-go aftertaste cultivar whipped Frappuccino pumpkin. Medium foam single irish wings aroma Dark aged extraction foam irish roast.</p>
-      </article>
+      <h1>Campfire Coffee</h1>
+      <section id="maininfo">
+        <table id="locationshourstable">
+          <tr>
+            <th colspan="2">Our Locations</th>
+            <th>Hours</th>
+          <tr>
+            <td>Pike Place Market</td>
+            <td>Western &amp; Virginia</td>
+            <td>7am - 9pm</td>
+          </tr>
+          <tr>
+            <td>Capitol Hill</td>
+            <td>12th &amp; Pike</td>
+            <td>7am - 9pm</td>
+          </tr>
+          <tr>
+            <td>Seattle Public Library</td>
+            <td>5th &amp; Madison</td>
+            <td>7am - 9pm</td>
+          </tr>
+          <tr>
+            <td>South Lake Union</td>
+            <td>Republican &amp; Terry</td>
+            <td>7am - 9pm</td>
+          </tr>
+          <tr>
+            <td>Sea-Tac Airport</td>
+            <td>Concourse C</td>
+            <td>7am - 9pm</td>
+          </tr>
+        </table>
+        <aside id="socialmedia">
+          <img src="images/icon_twitter.png" />
+          <img src="images/icon_instagram.png" />
+          <img src="images/icon_facebook.png" />
+        </aside>
+      </section>
+      <section id="aboutus">
+        <img src="images/campfire-coffee.jpg" id="aboutusimg" alt="Photograph of a kettle over a campfire." title="Photograph of a kettle over a campfire." />
+        <p>Instant carajillo qui aged trade extra seasonal Dark go extra variety grinder java espresso. Cup organic dripper extraction redeye rich medium medium go mountain trade seasonal coffee press. Irish pot white whipped cappuccino white plunger frappuccino percolator ut single Caffeine barista. Irish café skinny Variety so affogato cinnamon panna viennese single sit Variety cup rich. Cortado robust kopi-luwak café est milk cortado café organic aged to cultivar decaffeinated. Beans aromatic robust so flavour organic Coffee redeye Seasonal grinder extra milk.</p>
+      </section>
+      <section id="aboutcoffee">
+        <p>Cinnamon instant grinder that rich Affogato Instant half milk white aftertaste carajillo ristretto shop. Shop aromatic panna doppio dripper Coffee mountain body milk robust french brewed skinny. Brewed irish cappuccino mountain sugar arabica cortado skinny lait Instant aged french Frappuccino Coffee. Brewed Caffeine grounds Shop shot Dark panna foam Coffee lungo black affogato wings pot.</p>
+        <img src="images/campfire.jpg" id="aboutcoffeeimg" alt="Photograph of a campfire on a beach in the PNW." title="Photograph of a campfire on a beach in the PNW." />
+      </section>
+      <section id="blog">
+        <h1>Our Blog</h1>
+        <article id="blogcontent">
+          <img src="images/campfire-family.jpg" id="blogimage" alt="Photograph of my family roasting marshmallows over a campfire, I was 5 years old." title="Photograph of my family roasting marshmallows over a campfire, I was 5 years old." />
+          <p>Chicory carajillo cappuccino Affogato half frappuccino est irish origin grounds aged spice pumpkin extraction. Iced aromatic ristretto Shop mazagran est viennese Coffee doppio Seasonal white white. Percolator cultivar Caffeine coffee robust barista strong to to aromatic grounds spoon galão. Variety kopi-luwak extra cappuccino redeye go to-go aftertaste cultivar whipped Frappuccino pumpkin. Medium foam single irish wings aroma Dark aged extraction foam irish roast.</p>
+        </article>
+      </section>
     </main>
 
     <footer>
+      <p>All content &copy; Campfire Coffee.
     </footer>
-
-    <!-- is there a way to pull just the locations array into here to use in table??? -->
-    <!-- <script src="app.js" type="text/javascript"></script> -->
 
   </body>
 
