--- a/data.html
+++ b/data.html
@@ -3,7 +3,7 @@
 
   <head>
     <title>Campfire Coffee, Tuesday version</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="style-data.css" />
   </head>
 
   <body>
