added containing elements for image sizing

--- a/index.html
+++ b/index.html
@@ -45,24 +45,39 @@
           </tr>
         </table>
         <aside id="socialmedia">
-          <img src="images/icon_twitter.png" />
-          <img src="images/icon_instagram.png" />
-          <img src="images/icon_facebook.png" />
+          <a href="http://www.twitter.com"><img src="images/icon_twitter.png" class="socialimg" /></a>
+          <a href="http://www.instagram.com"><img src="images/icon_instagram.png" class="socialimg" /></a>
+          <a href="http://www.facebook.com"><img src="images/icon_facebook.png" class="socialimg" /></a>
         </aside>
       </section>
       <section id="aboutus">
-        <img src="images/campfire-coffee.jpg" id="aboutusimg" alt="Photograph of a kettle over a campfire." title="Photograph of a kettle over a campfire." />
-        <p>Instant carajillo qui aged trade extra seasonal Dark go extra variety grinder java espresso. Cup organic dripper extraction redeye rich medium medium go mountain trade seasonal coffee press. Irish pot white whipped cappuccino white plunger frappuccino percolator ut single Caffeine barista. Irish café skinny Variety so affogato cinnamon panna viennese single sit Variety cup rich. Cortado robust kopi-luwak café est milk cortado café organic aged to cultivar decaffeinated. Beans aromatic robust so flavour organic Coffee redeye Seasonal grinder extra milk.</p>
+        <div class="imagecontainer">
+          <img src="images/campfire-coffee.jpg" class="photograph" alt="Photograph of a kettle over a campfire." title="Photograph of a kettle over a campfire." />
+        </div>
+        <div class="about">
+          <h3>About Us</h3>
+          <p>Instant carajillo qui aged trade extra seasonal Dark go extra variety grinder java espresso. Cup organic dripper extraction redeye rich medium medium go mountain trade seasonal coffee press. Irish pot white whipped cappuccino white plunger frappuccino percolator ut single Caffeine barista. Irish café skinny Variety so affogato cinnamon panna viennese single sit Variety cup rich. Cortado robust kopi-luwak café est milk cortado café organic aged to cultivar decaffeinated. Beans aromatic robust so flavour organic Coffee redeye Seasonal grinder extra milk.</p>
+        </div>
       </section>
       <section id="aboutcoffee">
-        <p>Cinnamon instant grinder that rich Affogato Instant half milk white aftertaste carajillo ristretto shop. Shop aromatic panna doppio dripper Coffee mountain body milk robust french brewed skinny. Brewed irish cappuccino mountain sugar arabica cortado skinny lait Instant aged french Frappuccino Coffee. Brewed Caffeine grounds Shop shot Dark panna foam Coffee lungo black affogato wings pot.</p>
-        <img src="images/campfire.jpg" id="aboutcoffeeimg" alt="Photograph of a campfire on a beach in the PNW." title="Photograph of a campfire on a beach in the PNW." />
+        <div class="about">
+          <h3>About Our Coffee</h3>
+          <p>Cinnamon instant grinder that rich Affogato Instant half milk white aftertaste carajillo ristretto shop. Shop aromatic panna doppio dripper Coffee mountain body milk robust french brewed skinny. Brewed irish cappuccino mountain sugar arabica cortado skinny lait Instant aged french Frappuccino Coffee. Brewed Caffeine grounds Shop shot Dark panna foam Coffee lungo black affogato wings pot.</p>
+        </div>
+        <div class="imagecontainer">
+          <img src="images/campfire.jpg" class="photograph" alt="Photograph of a campfire on a beach in the PNW." title="Photograph of a campfire on a beach in the PNW." />
+        </div>
       </section>
       <section id="blog">
-        <h1>Our Blog</h1>
+        <h2>Our Blog</h2>
         <article id="blogcontent">
-          <img src="images/campfire-family.jpg" id="blogimage" alt="Photograph of my family roasting marshmallows over a campfire, I was 5 years old." title="Photograph of my family roasting marshmallows over a campfire, I was 5 years old." />
-          <p>Chicory carajillo cappuccino Affogato half frappuccino est irish origin grounds aged spice pumpkin extraction. Iced aromatic ristretto Shop mazagran est viennese Coffee doppio Seasonal white white. Percolator cultivar Caffeine coffee robust barista strong to to aromatic grounds spoon galão. Variety kopi-luwak extra cappuccino redeye go to-go aftertaste cultivar whipped Frappuccino pumpkin. Medium foam single irish wings aroma Dark aged extraction foam irish roast.</p>
+          <div class="imagecontainer">
+            <img src="images/campfire-family.jpg" class="photograph" alt="Photograph of my family roasting marshmallows over a campfire, I was 5 years old." title="Photograph of my family roasting marshmallows over a campfire, I was 5 years old." />
+          </div>
+          <div class="about">
+            <p>Monday, May 22nd, 2016</p>
+            <p>Chicory carajillo cappuccino Affogato half frappuccino est irish origin grounds aged spice pumpkin extraction. Iced aromatic ristretto Shop mazagran est viennese Coffee doppio Seasonal white white. Percolator cultivar Caffeine coffee robust barista strong to to aromatic grounds spoon galão. Variety kopi-luwak extra cappuccino redeye go to-go aftertaste cultivar whipped Frappuccino pumpkin. Medium foam single irish wings aroma Dark aged extraction foam irish roast.</p>
+          </div>
         </article>
       </section>
     </main>
