--- a/index.html
+++ b/index.html
@@ -57,12 +57,14 @@
         <div class="about">
           <h3>About Us</h3>
           <p>Instant carajillo qui aged trade extra seasonal Dark go extra variety grinder java espresso. Cup organic dripper extraction redeye rich medium medium go mountain trade seasonal coffee press. Irish pot white whipped cappuccino white plunger frappuccino percolator ut single Caffeine barista. Irish café skinny Variety so affogato cinnamon panna viennese single sit Variety cup rich. Cortado robust kopi-luwak café est milk cortado café organic aged to cultivar decaffeinated. Beans aromatic robust so flavour organic Coffee redeye Seasonal grinder extra milk.</p>
+          <p><a href="" class="more">Read more about us</a></p>
         </div>
       </section>
       <section id="aboutcoffee">
         <div class="about">
           <h3>About Our Coffee</h3>
           <p>Cinnamon instant grinder that rich Affogato Instant half milk white aftertaste carajillo ristretto shop. Shop aromatic panna doppio dripper Coffee mountain body milk robust french brewed skinny. Brewed irish cappuccino mountain sugar arabica cortado skinny lait Instant aged french Frappuccino Coffee. Brewed Caffeine grounds Shop shot Dark panna foam Coffee lungo black affogato wings pot.</p>
+          <p><a href="" class="more">Read more about our coffee</a></p>
         </div>
         <div class="imagecontainer">
           <img src="images/campfire.jpg" class="photograph" alt="Photograph of a campfire on a beach in the PNW." title="Photograph of a campfire on a beach in the PNW." />
@@ -77,6 +79,7 @@
           <div class="about">
             <p>Monday, May 22nd, 2016</p>
             <p>Chicory carajillo cappuccino Affogato half frappuccino est irish origin grounds aged spice pumpkin extraction. Iced aromatic ristretto Shop mazagran est viennese Coffee doppio Seasonal white white. Percolator cultivar Caffeine coffee robust barista strong to to aromatic grounds spoon galão. Variety kopi-luwak extra cappuccino redeye go to-go aftertaste cultivar whipped Frappuccino pumpkin. Medium foam single irish wings aroma Dark aged extraction foam irish roast.</p>
+            <p><a href="" class="more">Read more blog posts</a></p>
           </div>
         </article>
       </section>
@@ -85,6 +88,8 @@
     <footer>
       <p>All content &copy; Campfire Coffee.
     </footer>
+
+    <div id="opacitytest"></div>
 
   </body>
 
