--- a/index.html
+++ b/index.html
@@ -56,23 +56,23 @@
           <img src="images/campfire-coffee.jpg" class="photograph" alt="Photograph of a kettle over a campfire." title="Photograph of a kettle over a campfire." />
         </div>
         <div id="aboutustext">
-          <h3>About Us</h3>
+          <h3><a href="#">About Us</a></h3>
           <p>Instant carajillo qui aged trade extra seasonal Dark go extra variety grinder java espresso. Cup organic dripper extraction redeye rich medium medium go mountain trade seasonal coffee press. Irish pot white whipped cappuccino white plunger frappuccino percolator ut single Caffeine barista. Irish café skinny Variety so affogato cinnamon panna viennese single sit Variety cup rich. Cortado robust kopi-luwak café est milk cortado café organic aged to cultivar decaffeinated. Beans aromatic robust so flavour organic Coffee redeye Seasonal grinder extra milk.</p>
-          <p><a href="" class="more">Read more about us</a></p>
+          <p><a href="#" class="more">Read more about us</a></p>
         </div>
       </section>
       <section id="aboutcoffee">
         <div id="aboutcoffeetext">
-          <h3>About Our Coffee</h3>
+          <h3><a href="#">About Our Coffee</a></h3>
           <p>Cinnamon instant grinder that rich Affogato Instant half milk white aftertaste carajillo ristretto shop. Shop aromatic panna doppio dripper Coffee mountain body milk robust french brewed skinny. Brewed irish cappuccino mountain sugar arabica cortado skinny lait Instant aged french Frappuccino Coffee. Brewed Caffeine grounds Shop shot Dark panna foam Coffee lungo black affogato wings pot.</p>
-          <p><a href="" class="more">Read more about our coffee</a></p>
+          <p><a href="#" class="more">Read more about our coffee</a></p>
         </div>
         <div class="imagecontainer">
           <img src="images/campfire.jpg" class="photograph" alt="Photograph of a campfire on a beach in the PNW." title="Photograph of a campfire on a beach in the PNW." />
         </div>
       </section>
       <section id="blogcontainer">
-        <h2>Our Blog</h2>
+        <h2><a href="#">Our Blog</a></h2>
         <article id="blog">
           <div class="imagecontainer">
             <img src="images/campfire-family.jpg" class="photograph" alt="Photograph of my family roasting marshmallows over a campfire, I was 5 years old." title="Photograph of my family roasting marshmallows over a campfire, I was 5 years old." />
@@ -80,7 +80,7 @@
           <div id="blogtext">
             <p class="blogtimestamp">Monday, May 22nd, 2016</p>
             <p>Chicory carajillo cappuccino Affogato half frappuccino est irish origin grounds aged spice pumpkin extraction. Iced aromatic ristretto Shop mazagran est viennese Coffee doppio Seasonal white white. Percolator cultivar Caffeine coffee robust barista strong to to aromatic grounds spoon galão. Variety kopi-luwak extra cappuccino redeye go to-go aftertaste cultivar whipped Frappuccino pumpkin. Medium foam single irish wings aroma Dark aged extraction foam irish roast.</p>
-            <p><a href="" class="more">Read more blog posts</a></p>
+            <p><a href="#" class="more">Read more blog posts</a></p>
           </div>
         </article>
       </section>
