--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 
 <html>
@@ -12,83 +11,87 @@
 
   <body>
 
-    <main>
-      <h1>Campfire Coffee</h1>
-      <section id="maininfo">
-        <table id="locationshourstable">
-          <tr>
-            <th colspan="2">Our Locations</th>
-            <th>Hours</th>
-          <tr>
-            <td>Pike Place Market</td>
-            <td>Western &amp; Virginia</td>
-            <td>7am - 9pm</td>
-          </tr>
-          <tr>
-            <td>Capitol Hill</td>
-            <td>12th &amp; Pike</td>
-            <td>7am - 9pm</td>
-          </tr>
-          <tr>
-            <td>Seattle Public Library</td>
-            <td>5th &amp; Madison</td>
-            <td>7am - 9pm</td>
-          </tr>
-          <tr>
-            <td>South Lake Union</td>
-            <td>Republican &amp; Terry</td>
-            <td>7am - 9pm</td>
-          </tr>
-          <tr>
-            <td>Sea-Tac Airport</td>
-            <td>Concourse C</td>
-            <td>7am - 9pm</td>
-          </tr>
-        </table>
-        <aside id="socialmedia">
-          <a href="http://www.twitter.com"><img src="images/icon_twitter.png" class="socialimg" /></a>
-          <a href="http://www.instagram.com"><img src="images/icon_instagram.png" class="socialimg" /></a>
-          <a href="http://www.facebook.com"><img src="images/icon_facebook.png" class="socialimg" /></a>
-        </aside>
-      </section>
-      <section id="aboutus">
-        <div class="imagecontainer">
-          <img src="images/campfire-coffee.jpg" class="photograph" alt="Photograph of a kettle over a campfire." title="Photograph of a kettle over a campfire." />
-        </div>
-        <div id="aboutustext">
-          <h3><a href="#">About Us</a></h3>
-          <p>Instant carajillo qui aged trade extra seasonal Dark go extra variety grinder java espresso. Cup organic dripper extraction redeye rich medium medium go mountain trade seasonal coffee press. Irish pot white whipped cappuccino white plunger frappuccino percolator ut single Caffeine barista. Irish café skinny Variety so affogato cinnamon panna viennese single sit Variety cup rich. Cortado robust kopi-luwak café est milk cortado café organic aged to cultivar decaffeinated. Beans aromatic robust so flavour organic Coffee redeye Seasonal grinder extra milk.</p>
-          <p><a href="#" class="more">Read more about us</a></p>
-        </div>
-      </section>
-      <section id="aboutcoffee">
-        <div id="aboutcoffeetext">
-          <h3><a href="#">About Our Coffee</a></h3>
-          <p>Cinnamon instant grinder that rich Affogato Instant half milk white aftertaste carajillo ristretto shop. Shop aromatic panna doppio dripper Coffee mountain body milk robust french brewed skinny. Brewed irish cappuccino mountain sugar arabica cortado skinny lait Instant aged french Frappuccino Coffee. Brewed Caffeine grounds Shop shot Dark panna foam Coffee lungo black affogato wings pot.</p>
-          <p><a href="#" class="more">Read more about our coffee</a></p>
-        </div>
-        <div class="imagecontainer">
-          <img src="images/campfire.jpg" class="photograph" alt="Photograph of a campfire on a beach in the PNW." title="Photograph of a campfire on a beach in the PNW." />
-        </div>
-      </section>
-      <section id="blogcontainer">
-        <h2><a href="#">Our Blog</a></h2>
-        <article id="blog">
+    <div id="bgcampcontainer">
+      <main>
+        <h1>Campfire Coffee</h1>
+        <section id="maininfo">
+          <table id="locationshourstable">
+            <tr>
+              <th colspan="2">Our Locations</th>
+              <th>Hours</th>
+            </tr>
+            <tr>
+              <td>Pike Place Market</td>
+              <td>Western &amp; Virginia</td>
+              <td>7am - 9pm</td>
+            </tr>
+            <tr>
+              <td>Capitol Hill</td>
+              <td>12th &amp; Pike</td>
+              <td>7am - 9pm</td>
+            </tr>
+            <tr>
+              <td>Seattle Public Library</td>
+              <td>5th &amp; Madison</td>
+              <td>7am - 9pm</td>
+            </tr>
+            <tr>
+              <td>South Lake Union</td>
+              <td>Republican &amp; Terry</td>
+              <td>7am - 9pm</td>
+            </tr>
+            <tr>
+              <td>Sea-Tac Airport</td>
+              <td>Concourse C</td>
+              <td>7am - 9pm</td>
+            </tr>
+          </table>
+          <aside id="socialmedia">
+            <a href="http://www.twitter.com"><img src="images/icon_twitter.png" class="socialimg" /></a>
+            <a href="http://www.instagram.com"><img src="images/icon_instagram.png" class="socialimg" /></a>
+            <a href="http://www.facebook.com"><img src="images/icon_facebook.png" class="socialimg" /></a>
+          </aside>
+        </section>
+        <section id="aboutus">
           <div class="imagecontainer">
-            <img src="images/campfire-family.jpg" class="photograph" alt="Photograph of my family roasting marshmallows over a campfire, I was 5 years old." title="Photograph of my family roasting marshmallows over a campfire, I was 5 years old." />
+            <img src="images/campfire-coffee.jpg" class="photograph" alt="Photograph of a kettle over a campfire." title="Photograph of a kettle over a campfire." />
           </div>
-          <div id="blogtext">
-            <p class="blogtimestamp">Monday, May 22nd, 2016</p>
-            <p>Chicory carajillo cappuccino Affogato half frappuccino est irish origin grounds aged spice pumpkin extraction. Iced aromatic ristretto Shop mazagran est viennese Coffee doppio Seasonal white white. Percolator cultivar Caffeine coffee robust barista strong to to aromatic grounds spoon galão. Variety kopi-luwak extra cappuccino redeye go to-go aftertaste cultivar whipped Frappuccino pumpkin. Medium foam single irish wings aroma Dark aged extraction foam irish roast.</p>
-            <p><a href="#" class="more">Read more blog posts</a></p>
+          <div id="aboutustext">
+            <h3><a href="#">About Us</a></h3>
+            <p>Our love of camping inspired our disntinctive coffee style. Instant carajillo qui aged trade extra seasonal Dark go extra variety grinder java espresso. Cup organic dripper extraction redeye rich medium medium go mountain trade seasonal coffee press. Irish pot white whipped cappuccino white plunger frappuccino percolator ut single Caffeine barista. Irish cafe skinny Variety so affogato cinnamon panna viennese single sit Variety cup rich. Cortado robust kopi-luwak cafe est milk cortado cafe organic aged to cultivar decaffeinated. Beans aromatic robust so flavour organic Coffee redeye Seasonal grinder extra milk.</p>
+            <p><a href="#" class="more">Read more about us</a></p>
           </div>
-        </article>
-      </section>
-    </main>
-
-    <footer>
-      <p>All content &copy; Campfire Coffee</p>
-    </footer>
+        </section>
+        <section id="aboutcoffee">
+          <div id="aboutcoffeetext">
+            <h3><a href="#">About Our Coffee</a></h3>
+            <p>Our coffee brings the outdoor spirit of the PNW to your morning. We roast our beans daily over an open wood fire to all the smoke to flavor the beans. We grind, deliver and brew the beans while they are still warm.</p>
+            <p>Cinnamon instant grinder that rich Affogato Instant half milk white aftertaste carajillo ristretto shop. Shop aromatic panna doppio dripper Coffee mountain body milk robust french brewed skinny. Brewed irish cappuccino mountain sugar arabica cortado skinny lait Instant aged french Frappuccino Coffee. Brewed Caffeine grounds Shop shot Dark panna foam Coffee lungo black affogato wings pot.</p>
+            <p><a href="#" class="more">Read more about our coffee</a></p>
+          </div>
+          <div class="imagecontainer">
+            <img src="images/campfire.jpg" class="photograph" alt="Photograph of a campfire on a beach in the PNW." title="Photograph of a campfire on a beach in the PNW." />
+          </div>
+        </section>
+        <section id="blogcontainer">
+          <h2><a href="#">Our Blog</a></h2>
+          <article id="blog">
+            <div class="imagecontainer">
+              <img src="images/campfire-family.jpg" class="photograph" alt="Photograph of my family roasting marshmallows over a campfire, I was 5 years old." title="Photograph of my family roasting marshmallows over a campfire, I was 5 years old." />
+            </div>
+            <div id="blogtext">
+              <p class="blogtimestamp">Monday, May 22nd, 2016</p>
+              <p>My mother recently sent me this photograph of our family, clearly my love of camping started early. That's me in the purple shirt, I was five years old.</p>
+              <p>Chicory carajillo cappuccino Affogato half frappuccino est irish origin grounds aged spice pumpkin extraction. Iced aromatic ristretto Shop mazagran est viennese Coffee doppio Seasonal white white. Percolator cultivar Caffeine coffee robust barista strong to to aromatic grounds spoon galao. Variety kopi-luwak extra cappuccino redeye go to-go aftertaste cultivar whipped Frappuccino pumpkin. Medium foam single irish wings aroma Dark aged extraction foam irish roast.</p>
+              <p><a href="#" class="more">Read more blog posts</a></p>
+            </div>
+          </article>
+        </section>
+      </main>
+      <footer>
+        <p>All content &copy; Campfire Coffee</p>
+      </footer>
+    </div> <!-- close #bgcampcontainer -->
 
   </body>
 
