--- a/data.html
+++ b/data.html
@@ -8,6 +8,12 @@
 
   <body>
 
+    <h1>Test Table One</h1>
+    <table id="test-table-one"></table>
+
+    <h1>Test Table Two</h1>
+    <table id="test-table-two"></table>
+
     <h1>Add A New Coffee Cart To Track</h1>
     <div id="formcontainer">
       <form id="add-new-location-form">
